# AigcFox

./: .env.example  .gitignore  .npmrc  AGENTS.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
apps/desktop-v3/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-v3/src-tauri/capabilities/: main-window.json
apps/desktop-v3/src-tauri/icons/: icon.icns
apps/desktop-v3/src-tauri/permissions/: main-window.toml
apps/desktop-v3/src-tauri/src/: env.rs  error.rs  lib.rs  main.rs
apps/desktop-v3/src-tauri/src/commands/: backend.rs  diagnostics.rs  mod.rs  preferences.rs  renderer.rs
apps/desktop-v3/src-tauri/src/runtime/: mod.rs  models.rs
apps/desktop-v3/src-tauri/src/runtime/client/: backend_client.rs  mod.rs  probe_contract.rs
apps/desktop-v3/src-tauri/src/runtime/diagnostics/: mod.rs
apps/desktop-v3/src-tauri/src/runtime/localdb/: migrations.rs  mod.rs
apps/desktop-v3/src-tauri/src/runtime/security/: mod.rs
apps/desktop-v3/src-tauri/src/runtime/state/: mod.rs
apps/desktop-v3/src-tauri/src/window/: initial_route.rs  main_window.rs  main_window_target.rs  mod.rs  telemetry.rs
config/: governance-command-docs-registry.json
docs/: 248-autonomous-execution-baseline.md  257-desktop-v3-replatform-proposal.md  258-desktop-v3-technical-baseline.md  259-desktop-v3-detailed-design.md  260-desktop-v3-wave1-execution-baseline.md  263-desktop-v3-wave1-acceptance-matrix.md  264-desktop-v3-wave1-execution-runbook.md  267-desktop-v3-github-actions-baseline.md  README.md  api.md  workflow.md  (+12 more)
(+302 files in other folders)
