[package]
name = "aigcfox-desktop-v3"
version = "0.1.0"
description = "AigcFox desktop-v3 Wave 1 skeleton"
authors = ["AigcFox"]
edition = "2024"

[lib]
name = "aigcfox_desktop_v3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
rusqlite_migration = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync"] }

[dev-dependencies]
tempfile = "3"

[workspace]
